# aws-browser

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pre-commit.yaml  release.yaml
aws_browser/: aws.py  browser.py  cli.py  constants.py
